# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml  rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230701194616_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
