[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.25", default-features = false, features = [ "clock" ] }
config = "0.13.3"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"]}
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.3", features = [ "v4" ] }
