[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.25", default-features = false, features = [ "clock" ] }
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"]}
serde-aux = "4.2.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.3", features = [ "v4" ] }

[dev-dependencies]
once_cell = "1.17.2"
reqwest = "0.11.18"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
